Search API Solr search 1.x, dev (xx/xx/xxxx):
---------------------------------------------

Search API Solr search 1.1 (07/21/2013):
----------------------------------------
- #1957730 by drunken monkey: Fixed filter query strings for negated filters.
- #2010818 by kenorb, drunken monkey: Added new Files tab showing all used solr
  config files.
- #2042201 by klausi: Fixed timeouts while optimizing Solr server.
- #2034719 by fago: Added raw term to autocompletion response.
- #2027843 by fago, drunken monkey: Made the Solr response available as part of
  the search results.
- #1834614 by drunken monkey: Fixed date fields in MLT queries.
- #1970652 by jsteggink: Fixed highlighting for text fields.
- #2016169 by tomdearden, drunken monkey: Fixed parsing of facets on
  multi-valued fields.
- #2008034 by bdecarne: Fixed highlighting in multi-index searches.

Search API Solr search 1.0 (06/09/2013):
----------------------------------------
- #1896080 by drunken monkey: Included additional required config files in the
  module.
- #1919572 by chaby: Fixed indexing of geohashes.
- #2004596 by drunken monkey: Fixed "More Like This" for Solr 4.x.
- #2007214 by drunken monkey: Fixed unsetting of object properties.
- #1884312 by drunken monkey, mvc: Fixed resetting of HTTP password upon
  re-saving of the configuration form.
- #1957774 by drunken monkey: Fixed displayed link to local Solr servers.
- #1721262 by Steven Jones, das-peter, drunken monkey: Added field collapsing
  support.
- #1549244 by cferthorney, drunken monkey: Added SSL Support for Solr servers.

Search API Solr search 1.0, RC 5 (05/17/2013):
----------------------------------------------
- #1190462 by drunken monkey: Documented that enabling HTML filter makes sense.
- #1986284 by drunken monkey: Updated common configs to the latest version.
- #1990422 by populist, drunken monkey: Added support for custom stream contexts
  for HTTP requests.