@@ -1,4 +1,4 @@
 # Contains words which shouldn't be indexed for fulltext fields, e.g., because
-# they're to common. For documentation of the format, see
+# they're too common. For documentation of the format, see
 # http://wiki.apache.org/solr/AnalyzersTokenizersTokenFilters#solr.StopFilterFactory
 # (Lines starting with a pound character # are ignored.)
