@@ -1,6 +1,17 @@
 Search API Solr search 1.x, dev (xx/xx/xxxx):
 ---------------------------------------------
 
+Search API Solr search 1.2 (09/01/2013):
+----------------------------------------
+- #1246730 by febbraro, maciej.zgadzaj, drunken monkey: Added a way to alter
+  the Solr document when indexing.
+- #2053553 by drunken monkey, andrewbelcher: Fixed spatial features with clean
+  field identifiers.
+- #2054373 by drunken monkey: Added the option to use clean field identifiers.
+- #1992806 by drunken monkey: Documented problems with Solr 4.3+.
+- #2045355 by drunken monkey, arpieb: Fixed result mapping of item IDs.
+- #2050157 by izus: Fixed typo in stopwords.txt.
+
 Search API Solr search 1.1 (07/21/2013):
 ----------------------------------------
 - #1957730 by drunken monkey: Fixed filter query strings for negated filters.
